--- a/tests/cluster-gce.yaml
+++ b/tests/cluster-gce.yaml
@@ -1,15 +1,12 @@
 noenv:buttbuildertest:
   clusterDomain: cluster.local
-  kubeletVersion: v1.7.9_coreos.0
+  kubeletVersion: v1.8.3_coreos.0
   externalNet: "10.254.0.0/24"
   clusterNet: "192.168.66.0/24"
   coreosChannel: stable
   provider: gce
   project: weave-lab
   region: us-central1
-  officeIP:
-    - "205.197.215.90/32"
-    - "66.219.192.186/32"
   googleHealthChecks:
     - "209.85.152.0/22"
     - "209.85.204.0/22"
@@ -26,11 +23,11 @@ noenv:buttbuildertest:
   services:
     namespaces:
       ops:
-      - chart: weavelab/alertmanager
-      - chart: weavelab/grafana
-      - chart: weavelab/kafka
-      - chart: weavelab/node-exporter
-      - chart: weavelab/prometheus
-      - chart: weavelab/zookeeper
+      - chart: mychartrepo/alertmanager
+      - chart: mychartrepo/grafana
+      - chart: mychartrepo/kafka
+      - chart: mychartrepo/node-exporter
+      - chart: mychartrepo/prometheus
+      - chart: mychartrepo/zookeeper
       kube-system:
-      - chart: weavelab/traefik
+      - chart: mychartrepo/traefik
