--- a/ignition/storage/files/addon-manager.yaml
+++ b/ignition/storage/files/addon-manager.yaml
@@ -14,7 +14,7 @@
         hostNetwork: true
         containers:
         - name: kube-addon-manager
-          image: gcr.io/google-containers/kube-addon-manager:v6.4-beta.2
+          image: gcr.io/google-containers/kube-addon-manager:v6.5
           command:
           - /bin/bash
           - -c
