--- a/butt-templates/manifests/master/kube-proxy.yaml
+++ b/butt-templates/manifests/master/kube-proxy.yaml
@@ -12,13 +12,25 @@ spec:
     - /hyperkube
     - proxy
     - --master=http://127.0.0.1:8080
+    - --cluster-cidr=%(cluster_cidr)s
     securityContext:
       privileged: true
     volumeMounts:
       - mountPath: /etc/ssl/certs
         name: "ssl-certs"
+      - mountPath: /etc/kubernetes/kubeconfig.yaml
+        name: "kubeconfig"
+        readOnly: true
+      - mountPath: /etc/kubernetes/ssl
+        name: "etc-kubernetes-ssl"
         readOnly: true
   volumes:
     - name: "ssl-certs"
       hostPath:
         path: "/usr/share/ca-certificates"
+    - name: "kubeconfig"
+      hostPath:
+        path: "/etc/kubernetes/kubeconfig.yaml"
+    - name: "etc-kubernetes-ssl"
+      hostPath:
+        path: "/etc/kubernetes/ssl"
