--- a/butt-templates/manifests/worker/kube-proxy.yaml
+++ b/butt-templates/manifests/worker/kube-proxy.yaml
@@ -12,13 +12,14 @@ spec:
     - /hyperkube
     - proxy
     - --master=https://%(master_ip)s
-    - --kubeconfig=/etc/kubernetes/worker-kubeconfig.yaml
+    - --kubeconfig=/etc/kubernetes/kubeconfig.yaml
+    - --cluster-cidr=%(cluster_cidr)s
     securityContext:
       privileged: true
     volumeMounts:
       - mountPath: /etc/ssl/certs
         name: "ssl-certs"
-      - mountPath: /etc/kubernetes/worker-kubeconfig.yaml
+      - mountPath: /etc/kubernetes/kubeconfig.yaml
         name: "kubeconfig"
         readOnly: true
       - mountPath: /etc/kubernetes/ssl
@@ -30,7 +31,7 @@ spec:
         path: "/usr/share/ca-certificates"
     - name: "kubeconfig"
       hostPath:
-        path: "/etc/kubernetes/worker-kubeconfig.yaml"
+        path: "/etc/kubernetes/kubeconfig.yaml"
     - name: "etc-kubernetes-ssl"
       hostPath:
         path: "/etc/kubernetes/ssl"
