--- a/ignition/flannel/options.yaml
+++ b/ignition/flannel/options.yaml
@@ -1,5 +1,5 @@
 interface: {ip}
 etcd_endpoints: {etcd_hosts}
 ip_masq: true
-network_config: '{{"Network": "{cluster_cidr}", "Backend": {{"Type": "vxlan", "DirectRouting": true }}}}'
+network_config: '{{"Network": "{cluster_cidr}", "Backend": {{"Type": "vxlan"}}}}'
 version: "0.10.0"
