--- a/ignition/storage/files/kube-proxy-config.yaml
+++ b/ignition/storage/files/kube-proxy-config.yaml
@@ -4,38 +4,14 @@
   contents:
     inline: |
       apiVersion: kubeproxy.config.k8s.io/v1alpha1
-      bindAddress: 0.0.0.0
-      clientConnection:
-        acceptContentTypes: ""
-        burst: 10
-        contentType: application/vnd.kubernetes.protobuf
-        kubeconfig: /etc/kubernetes/kubeconfig.yaml
-        qps: 5
-      clusterCIDR: {cluster_cidr}
-      configSyncPeriod: 15m0s
-      conntrack:
-        max: 0
-        maxPerCore: 32768
-        min: 131072
-        tcpCloseWaitTimeout: 1h0m0s
-        tcpEstablishedTimeout: 24h0m0s
-      enableProfiling: false
-      healthzBindAddress: 0.0.0.0:10256
-      hostnameOverride: ""
-      iptables:
-        masqueradeAll: false
-        masqueradeBit: 14
-        minSyncPeriod: 0s
-        syncPeriod: 30s
-      ipvs:
-        minSyncPeriod: 15s
-        scheduler: lblcr
-        syncPeriod: 30s
       kind: KubeProxyConfiguration
+      clientConnection:
+        kubeconfig: /etc/kubernetes/kubeconfig.yaml
+      clusterCIDR: {cluster_cidr}
+      healthzBindAddress: 0.0.0.0:10256
       metricsBindAddress: 0.0.0.0:10249
       mode: ipvs
-      nodePortAddresses: null
-      oomScoreAdj: -999
-      portRange: ""
-      resourceContainer: /kube-proxy
-      udpIdleTimeout: 250ms
+      ipvs:
+        minSyncPeriod: 15s
+        scheduler: wlc
+        syncPeriod: 30s
