--- a/ignition/storage/files/kube-proxy.yaml
+++ b/ignition/storage/files/kube-proxy.yaml
@@ -1,57 +1,88 @@
 - filesystem: "root"
-  path: "/etc/kubernetes/manifests/kube-proxy.yaml"
+  path: "/etc/kubernetes/addons/kube-proxy.yaml"
   mode: 0644
   contents:
     inline: |
-      apiVersion: v1
-      kind: Pod
+      apiVersion: extensions/v1beta1
+      kind: DaemonSet
       metadata:
+        labels:
+          k8s-app: kube-proxy
+          addonmanager.kubernetes.io/mode: Reconcile
         name: kube-proxy
         namespace: kube-system
-        annotations:
-            prometheus.io.scrape: "true"
-            prometheus.io.path: "/metrics"
-            prometheus.io.port: "10249"
-            scheduler.alpha.kubernetes.io/critical-pod: ""
       spec:
-        hostNetwork: true
-        containers:
-        - name: kube-proxy
-          image: quay.io/coreos/hyperkube:{kubeletVersion}
-          command:
-          - /hyperkube
-          - proxy
-          - --config=/etc/kubernetes/config/kube-proxy.conf
-          securityContext:
-            privileged: true
-          volumeMounts:
-            - mountPath: /etc/ssl/certs
-              name: "ssl-certs"
-            - mountPath: /etc/kubernetes/kubeconfig.yaml
-              name: "kubeconfig"
-              readOnly: true
-            - mountPath: /etc/kubernetes/config/kube-proxy.conf
-              name: "proxyconfig"
-              readOnly: true
-            - mountPath: /etc/kubernetes/ssl
-              name: "etc-kubernetes-ssl"
-              readOnly: true
-            - mountPath: /lib/modules
-              name: "modules"
-              readOnly: true
-        volumes:
-          - name: "ssl-certs"
-            hostPath:
-              path: "/usr/share/ca-certificates"
-          - name: "kubeconfig"
-            hostPath:
-              path: "/etc/kubernetes/kubeconfig.yaml"
-          - name: "proxyconfig"
-            hostPath:
-              path: "/etc/kubernetes/config/kube-proxy.conf"
-          - name: "etc-kubernetes-ssl"
-            hostPath:
-              path: "/etc/kubernetes/ssl"
-          - name: "modules"
-            hostPath:
-              path: "/lib/modules"
+        selector:
+          matchLabels:
+            k8s-app: kube-proxy
+        updateStrategy:
+          type: RollingUpdate
+          rollingUpdate:
+            maxUnavailable: 25%
+        template:
+          metadata:
+            labels:
+              k8s-app: kube-proxy
+            annotations:
+              prometheus.io.scrape: "true"
+              prometheus.io.path: "/metrics"
+              prometheus.io.port: "10249"
+              scheduler.alpha.kubernetes.io/critical-pod: ""
+          spec:
+            priorityClassName: system-node-critical
+            hostNetwork: true
+            nodeSelector:
+              beta.kubernetes.io/kube-proxy-ds-ready: "true"
+            tolerations:
+            - operator: "Exists"
+              effect: "NoExecute"
+            - operator: "Exists"
+              effect: "NoSchedule"
+            containers:
+            - name: kube-proxy
+              image: quay.io/coreos/hyperkube:{kubeletVersion}
+              command:
+              - /hyperkube
+              - proxy
+              - --config=/etc/kubernetes/config/kube-proxy.conf
+              securityContext:
+                privileged: true
+              volumeMounts:
+              - mountPath: /etc/ssl/certs
+                name: "ssl-certs"
+              - mountPath: /etc/kubernetes/kubeconfig.yaml
+                name: "kubeconfig"
+                readOnly: true
+              - mountPath: /etc/kubernetes/config/kube-proxy.conf
+                name: "proxyconfig"
+                readOnly: true
+              - mountPath: /etc/kubernetes/ssl
+                name: "etc-kubernetes-ssl"
+                readOnly: true
+              - mountPath: /lib/modules
+                name: "modules"
+                readOnly: true
+              - mountPath: /run/xtables.lock
+                name: xtables-lock
+                readOnly: false
+            volumes:
+            - name: "ssl-certs"
+              hostPath:
+                path: "/usr/share/ca-certificates"
+            - name: "kubeconfig"
+              hostPath:
+                path: "/etc/kubernetes/kubeconfig.yaml"
+            - name: "proxyconfig"
+              hostPath:
+                path: "/etc/kubernetes/config/kube-proxy.conf"
+            - name: "etc-kubernetes-ssl"
+              hostPath:
+                path: "/etc/kubernetes/ssl"
+            - name: "modules"
+              hostPath:
+                path: "/lib/modules"
+            - name: xtables-lock
+              hostPath:
+                path: /run/xtables.lock
+                type: FileOrCreate
+            serviceAccountName: kube-proxy
