--- a/ignition/storage/files/kube-apiserver.yaml
+++ b/ignition/storage/files/kube-apiserver.yaml
@@ -12,7 +12,7 @@
         hostNetwork: true
         containers:
         - name: kube-apiserver
-          image: quay.io/coreos/hyperkube:{kubeletVersion}
+          image: {kubeletURL}:{kubeletVersion}
           command:
           - /hyperkube
           - apiserver
