--- a/ignition/systemd/units/kubelet.service.yaml
+++ b/ignition/systemd/units/kubelet.service.yaml
@@ -4,6 +4,8 @@
     [Unit]
     Description=kubelet service
     [Service]
+    Environment=RKT_GLOBAL_ARGS="--insecure-options=image"
+    Environment=KUBELET_IMAGE_URL=docker://{kubeletURL}
     Environment=KUBELET_IMAGE_TAG={kubeletVersion}
     Environment="RKT_RUN_ARGS=--uuid-file-save=/var/run/kubelet-pod.uuid \
       --volume var-log,kind=host,source=/var/log \
@@ -31,7 +33,7 @@
       --cluster-domain={clusterDomain} \
       --tls-cert-file=/etc/kubernetes/ssl/{hostname}.pem \
       --tls-private-key-file=/etc/kubernetes/ssl/{hostname}-key.pem \
-      --node-labels=cluster-role={clusterRole}{additionalLabels} \
+      --node-labels=cluster-role={clusterRole},{additionalLabels} \
       --cloud-provider={buttProvider}
 
     ExecStop=-/usr/bin/rkt stop --uuid-file=/var/run/kubelet-pod.uuid
